# dotprojects

./: .gitignore
app/: package-lock.json
apps/cpp/: standard_version.cpp
apps/cpp/algorithms/: zero-one.cpp  zero-two.cpp
apps/cpp/cv/: CMakeLists.txt  main.cpp
apps/cpp/unions/: space_age.cpp  space_age.h
apps/cpp/unitemu/: io.hpp  main.cpp  mio.h
apps/js/app/: package.json
apps/js/app/src/: index.css
apps/zig/: build.zig  main.zig
cpp/apps/exercism/ex_001/: space_age.h
cpp/exercism/ex_001/: bin  space_age.cpp
